# CompGraphicsProj

./: .gitignore  BingusTwo.cpp  BingusTwo.hpp  CMakeLists.txt  Character.hpp  Engine.cpp  Engine.hpp  FPEngine.cpp  FPEngine.hpp  Jammss.cpp  Jammss.hpp  Lab05Engine.cpp  Lab05Engine.hpp  Plane.cpp  Plane.hpp  README.txt  Raistlin.cpp  Raistlin.hpp  Zennia.cpp  Zennia.hpp  assets.mtl  main.cpp  readme.txt
shaders/: FP.f.glsl  FP.v.glsl  lab05.f.glsl  lab05.v.glsl  skyboxShader.f.glsl  skyboxShader.v.glsl
